--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
     <modules>
         <module>designPattern</module>
     </modules>
+    <dependencies>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
